Fix iphone layout issue by moving heading down 1em

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -3,7 +3,7 @@ article {
   a { @extend .force-wrap; }
   header {
     position: relative;
-    padding-top: 2em;
+    padding-top: 3em;
     padding-bottom: 1em;
     margin-bottom: 1em;
     background: $img-border bottom left repeat-x;
@@ -89,7 +89,7 @@ article + article {
 }
 #content .blog-index {
   padding: { top: 0; bottom: 0; }
-  article { padding-top: 2em; }
+  article { padding-top: 3em; }
   article header { background: none; padding-bottom: 0; }
   article h1 {
     font-size: 2.2em;
